...

                await BlueApp.createFakeStorage(p1);
                EV(EV.enum.WALLETS_COUNT_CHANGED);
                EV(EV.enum.TRANSACTIONS_COUNT_CHANGED);
                ReactNativeHapticFeedback.trigger('notificationSuccess', { ignoreAndroidSystemSettings: false });
                alert(loc.plausibledeniability.success);
                this.props.navigation.navigate('Wallets');
              }}
            />
          </ScrollView>
        </BlueCard>
      </SafeBlueArea>
    );
...
